--- a/IST541/Final/css/Lab4.css
+++ b/IST541/Final/css/Lab4.css
@@ -3,7 +3,7 @@
    =============================== */
 
 :root {
-  --navy: #17375e;
+  --navy: #1e3d6b;
   --navy-2: #284d7a;
   --navy-3: #2f5d95;
   --bg: #f6f8fb;
